--- a/spec/fixtures/nested_matchers.html
+++ b/spec/fixtures/nested_matchers.html
@@ -4,7 +4,9 @@
 
     <b class="nested"></b>
     <p class="deep-nesting">
-        <b class="nested"></b>
+        <b class="nested">
+          <i>italic</i>
+        </b>
         <b class="nested"></b>
     </p>
 </div>
